--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,4 +1,11 @@
-/*header*/
+{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+/*--header*/
 header {
     background-color: lightcoral;
 }
