--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -3,6 +3,15 @@
     margin: 0;
     box-sizing: border-box;
 }
+/*General style*/
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /*Generic project style*/
+    color: #3a3a3a;
+}
 
 
 /*--header*/
@@ -12,6 +21,8 @@ header {
 /*main content*/ 
 main {
     background-color: lightblue;
+    /* Make main element take up any surplus space to push footer down*/
+    flex: 1 0 auto;
 }
 /*footer*/
 footer {
