--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -20,9 +20,17 @@ header {
 }
 /*main content*/ 
 main {
-    background-color: lightblue;
+    /*background-color: lightblue;*/
     /* Make main element take up any surplus space to push footer down*/
     flex: 1 0 auto;
+    margin: 47px;
+}
+
+/* Hero section*/
+#hero {
+    height: 600px;
+    width: 100px;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
 }
 /*footer*/
 footer {
