--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@200;300;400;500;600;700&display=swap');
 
 /* Asterisk wildcard selector to override default styles added by the browser */
- {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -17,23 +17,16 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
-/* general styles*/
-#reasons h2 {
-    width: 90px;
-    margin: 20px auto;
-    margin-bottom: 20px;
-    text-align: center;
-    font-size: 280px;
+
+h1, h2, h3 {
+    font-family: 'Oswald', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    color: #252525;
 }
 
-#benefits-physical>div,
-#benefits-mental>div {
-    line-height: 20px;
-    margin-bottom: 20px;
-}
-
-#benefits p {
-    padding: 0 20px;
+.hidden-heading {
+    display: none;
 }
 
 /* Header */
@@ -52,18 +45,6 @@ header {
 header a {
     text-decoration: none;
     color: inherit;
-}
-
-hr {
-    border-top: 1px solid #3a3a3a;
-    margin: 5px 0;
-}
-
-h1 {
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    color: #252525;
 }
 
 #menu {
@@ -107,16 +88,13 @@ nav {
 
 /* Main content */
 main {
-    /* Make main element take up any surplus space to push footer down */
-
-    /* add margin at the top to prevent content from being covered by the header */
-
-    /* enable flex propertise for child elements */ 
-    margin-top: 47px;
+    /* Enlarge main element to push footer down*/
     flex: 1 0 auto;
-    display: flex; 
+    /* Add margin at the top to prevent content from being covered by the header */
+    margin-top: 47px;
+    /* Enable flex properties for child elements */
+    display: flex;
     flex-direction: column;
-   
 }
 
 /* Hero section */
@@ -124,25 +102,25 @@ main {
     height: 600px;
     width: 100%;
     background: url("../images/hero-image.webp") no-repeat center center/cover;
-} 
+    position: relative;
+}
 
 #cover-text {
-    /*final rgba value sets the opacity so it is semi- transparent */
-
+    /* Final rgba value sets the opacity so it is semi-transparent */
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
-    position: relative;
+    position: absolute;
     bottom: 30px;
     width: 80%;
     min-height: 200px;
-    padding-top:  40px; 
+    padding-top: 40px;
     padding-left: 10px;
 }
 
-#cover-text>h2,
-#cover-text>h3 {
+#cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 }
+
 /* Reasons section */
 #reasons {
     width: 90%;
@@ -155,35 +133,125 @@ main {
     font-size: 280%;
 }
 
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
 
+#benefits p {
+    padding: 0 20px;
+}
+
+#benefits hr {
+    border-top: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
 
 #circle-cover-bg {
-    background-color: url(../images/reasons-image.webp) no-repeate top center/ cover;
+    background: url('../images/reasons-image.webp') no-repeat top center / cover;
     height: 90vw;
     width: 90vw;
     margin-bottom: 20px;
-    border-radius: 50%; /* by adding radius border makes the squre image into a circle*/
-    max-width: 300%;
-    max-height: 300%; 
-
-    #benefits-image {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+    /* Makes the square image into a circle */
+    border-radius: 50%;
+    max-width: 300px;
+    max-height: 300px;
 }
-/* enables the flexbox layout mode, allowing you to manipulate elements' alignment, spacing, and order within a containe*/ 
-#benefirs-image {
+
+#benefits-image {
     display: flex;
     align-items: center;
     justify-content: center;
-
-
-
-#cover-text > h2, #cover-text > h3 {
-
- color: #ffffff;   
 }
+
+/* Meetup Times section */
+#times {
+    background: url('../images/dublin-city.webp') no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #fafafa;
+    background-color: rgba(0, 0, 0, .6);
+    padding: 15px;
+    text-align: center;
+    /* This will not wrap on screens of less than 400px wide.
+    Each div will expand to fill the available space on its row */
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* Creates a grid of meetup time dives over the background image */
+    border: 2px solid white;
+}
+
+#times h3 {
+    /* Override the heading colour set in general styles */
+    color: #fafafa;
+}
+
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+
+#photos {
+    line-height: 0;
+}
+
+/* Form */
+#signup {
+    background-image: url("../images/signup-image.webp");
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+
 /* Footer */
 #social-networks {
     text-align: center;
@@ -197,6 +265,14 @@ main {
     font-size: 160%;
     padding: 5%;
     color: #3a3a3a;
+}
+
+/* Media query: large or landscape phones (576px and up) */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
 }
 
 /* Media query: tablets and larger (768px and up) */
@@ -234,43 +310,69 @@ main {
         margin-top: 79px;
     }
 
-    /*Hero*/
+    /* Hero */
     #cover-text {
         width: 300px;
         right: 50px;
     }
 
+    /* Reasons section */
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
+    }
+
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
+
+    /* Gallery */
+    #photos {
+        column-count: 3;
+    }
+
+    /* Form */
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
+    }
 }
-
-/*reasons section */
- #benefits-physical,
- #benefits-mental {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
- }
-
- #benefits-physical > div,
- #benefits-mental > div {
-    width: 75%;
- }
-
-
- #benefits-mental > div {
-    text-align: end;
-    align-self: flex-end;
-
- }
-
 
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover{
         border-bottom: 1px solid #3a3a3a;
     }
-}
 
+    /* Gallery */
+    #photos {
+        column-count: 4;
+    }
+}
 
 @media screen and (min-width: 1200px) {    
     /* Reasons section */
@@ -278,22 +380,19 @@ main {
         display: flex;
         flex-direction: row;
     }
-    /* flex:1 property in CSS is a shorthand for the flex-grow property. 
-    which specifies how much of the available space within a container an element should take up, relative to the other elements.*/
 
-
-
-    /* All of these codes should be at bthe very bottom of your css file, because it is for the largest screen size*/
     #benefits > div {
         flex: 1;
     }
 
-     #benefits-image {
-        order: 0;
-     }
-     #benefits-mental {
+    #benefits-image {
+        order: 0
+    }
+
+    #benefits-mental {
         order: 1;
     }
+
     #benefits-mental > div {
         align-self: flex-start;
     }
@@ -301,4 +400,4 @@ main {
     #benefits-physical > div {
         align-self: flex-end;
     }
-
+}
